--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,12 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>this is title?</title>
+    <title>WarcraftEps</title>
     <script type="text/javascript" src="http://static.wowhead.com/widgets/power.js"></script>
     <script>var wowhead_tooltips = { "colorlinks": true, "iconizelinks": true, "renamelinks": true, "hide": { "droppedby": true, "dropchance": true } }</script>
   </head>
   <body>
     <div id="root" />
-    <script src="public/bundle.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./public/bundle.js"></script>
   </body>
+
 </html>
