--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root" />
-    <script type="text/javascript" src="./public/bundle.js"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
   </body>
 
 </html>
